[gd_scene load_steps=5 format=3 uid="uid://d26oneuob6hg"]

[ext_resource type="Script" path="res://Main.gd" id="1_gynnv"]
[ext_resource type="PackedScene" uid="uid://2oamih336fdi" path="res://Player.tscn" id="2_7rs0e"]
[ext_resource type="PackedScene" uid="uid://bgwlmlvmhrqpd" path="res://Mob.tscn" id="2_84vhn"]

[sub_resource type="Curve2D" id="Curve2D_w3py6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_gynnv")
mob_scene = ExtResource("2_84vhn")

[node name="Player" parent="." instance=ExtResource("2_7rs0e")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_w3py6")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
